# i3status-custom-pim

./: Cargo.toml  README.md
src/: main.rs
