[package]
name = "i3status-custom-pim"
description = "Generates JSON output for use with custom block of i3status-rust."
version = "0.1.0"
authors = ["Martin Bley <dev@mb-oss.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
chrono = "0.4"
json = "0.12.4"
